Fixed host name comparison (still Bug #17582)

mysql-test/r/ndb_config.result:
  test case for Bug #17582
mysql-test/t/ndb_config.test:
  test case for Bug #17582
ndb/tools/ndb_config.cpp:
  gethostname() returns a pointer to a static buffer so we 
  need to create a copy of the results before calling it on
  the 2nd host name, else we're effectively comparing a 
  hostname to itself which is of course always true
  (Bug #17582)