ndb/tools/ndb_config.cpp
@@ -411,28 +411,43 @@ HostMatch::eval(const Iter& iter)
   
   if(iter.get(m_key, &valc) == 0)
   {
-	  struct hostent *h1, *h2;
+	  struct hostent *h1, *h2, copy1;
+	  char *addr1;
+	  int stat;
 
 	  h1 = gethostbyname(m_value.c_str());
 	  if (h1 == NULL) {
 		  return 0;
 	  }
 
+	  // gethostbyname returns a pointer to a static structure
+	  // so we need to copy the results before doing the next call
+	  memcpy(&copy1, h1, sizeof(struct hostent));
+	  addr1 = (char *)malloc(copy1.h_length);
+	  memcpy(addr1, h1->h_addr, copy1.h_length);
+
 	  h2 = gethostbyname(valc);
 	  if (h2 == NULL) {
+		  free(addr1);
 		  return 0;
 	  }
 
-	  if (h1->h_addrtype != h2->h_addrtype) {
+	  if (copy1.h_addrtype != h2->h_addrtype) {
+		  free(addr1);
 		  return 0;
 	  }
 
-	  if (h1->h_length != h2->h_length) 
+	  if (copy1.h_length != h2->h_length) 
 	  {
+		  free(addr1);
 		  return 0;
 	  }
 	  
-	  return 0 == memcmp(h1->h_addr, h2->h_addr, h1->h_length);
+	  stat = memcmp(addr1, h2->h_addr, copy1.h_length);
+	  
+	  free(addr1);
+	  
+	  return (stat == 0);
   }
 
   return 0;
